@@ -4,6 +4,12 @@ Changelog
 1.0b10 - unreleased
 -------------------
 
+* Calculate subrequests against navigation root rather than portal.
+  [elro]
+
+* Supply closest context found for 404 pages.
+  [elro]
+
 * Lookup portal state with correct context.
   [elro]
 
